tests/ui/typeck/var_loc_contract_fns.stderr
error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         uint memory a2,
   |         ^^^^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: data location can only be specified for array, struct or mapping types
  --> ROOT/tests/ui/typeck/var_loc_contract_fns.sol:LL:CC
   |
LL |         E memory e2,
   |         ^^^^^^^^^^^
   |
   = note: data location must be none for function return parameter

error: aborting due to 16 previous errors

